# paper-tools

./: .gitignore  AGENTS_GUIDE.md  LICENSE  PROJECT.md  README.md  pyproject.toml
src/paper_tools/: __init__.py  analytic.py  config.py  inspirehep_tools.py  latex_tools.py  llm_wrapper.py  lmdb_wrapper.py  pipe_usage.py
tests/: app.py  embedding_db_test.py  main_text.tex  sample.tex  search_app.py  test_all.py  test_inspirehep_live.py  test_latex_tools.py
tests/templates/: index.html  results.html
tests/test_path/: data.mdb  lock.mdb
