[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-tools"
version = "0.1.0"
dependencies = [
  "requests",
  "lmdb",
  "msgpack",
  "appdirs",
  "pylatexenc==3.0a32",
  "pipe",
  "numpy",
  "faiss-cpu",
  "FlagEmbedding",
  "networkx",
]
requires-python = ">=3.8"
authors = [
  {name = "Siyang Ling", email = "lingsy.chris2011@gmail.com"},
]
description = "Automate certain aspects of paper writing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["inspire-hep", "latex", "literature", "academic-writing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]
tests = ["flask"]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/hypermania/paper-tools"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"